--- a/app/views/admin/custom_fields/edit_price.haml
+++ b/app/views/admin/custom_fields/edit_price.haml
@@ -13,8 +13,8 @@
 .left-navi-section
   = form_for @community, :as => :community, :url => update_price_admin_custom_fields_path, :method => :put do |form|
 
-    - min = MoneyUtil.to_units(MoneyUtil.to_money(@current_community.price_filter_min, @current_community.default_currency)) || 0
-    - max = MoneyUtil.to_units(MoneyUtil.to_money(@current_community.price_filter_max, @current_community.default_currency)) || 100000
+    - min = MoneyUtil.to_units(MoneyUtil.to_money(@current_community.price_filter_min, @current_community.currency)) || 0
+    - max = MoneyUtil.to_units(MoneyUtil.to_money(@current_community.price_filter_max, @current_community.currency)) || 100000
 
     .row
       .col-12
