--- a/app/views/homepage/_price_filter.haml
+++ b/app/views/homepage/_price_filter.haml
@@ -7,8 +7,8 @@
     .custom-filter-options
       - id = ["range-slider", "price"].join("-")
       .range-slider{id: id}
-        - min = MoneyUtil.to_units(MoneyUtil.to_money(@current_community.price_filter_min, @current_community.default_currency))
-        - max = MoneyUtil.to_units(MoneyUtil.to_money(@current_community.price_filter_max, @current_community.default_currency))
+        - min = MoneyUtil.to_units(MoneyUtil.to_money(@current_community.price_filter_min, @current_community.currency))
+        - max = MoneyUtil.to_units(MoneyUtil.to_money(@current_community.price_filter_max, @current_community.currency))
         - range = [min, max]
         - start = [params["price_min"] || min, params["price_max"] || max]
         - labels = ["#price-filter-min-value", "#price-filter-max-value"]
