fix description field

--- a/app/views/homepage/_list_item.haml
+++ b/app/views/homepage/_list_item.haml
@@ -25,13 +25,15 @@
             = shape_name(listing)
 
     %div{:class => (listing.listing_images.size > 0 ? "home-list-details-with-image" : "")}
-      %h2.home-list-title
-        = link_to listing_path(listing.url) do
+      = link_to listing_path(listing.url) do
+        %h2.home-list-title
           = listing.title
           - if @current_community.show_category_in_listing_list
             %a.home-share-type-link{:href => search_path(:transaction_type => shape_name_map[listing.listing_shape_id], :view => :list)}
               = icon_tag(listing.icon_name, ["icon-fix"])
               = shape_name(listing)
+        %p
+          = truncate(listing.description, length: 120, separator: ' ')
       .home-list-price-mobile{:class => (listing.listing_images.size > 0 ? "home-list-price-mobile-with-listing-image" : "home-list-price-mobile-without-listing-image")}
         - if listing.price
           .home-list-price-value-mobile
