--- a/app/views/listings/_listing_actions.haml
+++ b/app/views/listings/_listing_actions.haml
@@ -148,17 +148,17 @@
 
       = render partial: "delivery_opts", locals: { delivery_opts: delivery_opts, is_author: is_author }
 
-      = hidden_field_tag(:listing_id, @listing.id)
-
-      - blocked_dates_result.on_success do
-        %button.enabled-book-button
-          .content
-            = action_button_label(@listing)
-
-      - blocked_dates_result.on_error do
-        %button.disabled-book-button{disabled: true}
-          .content
-            = action_button_label(@listing)
+      -#= hidden_field_tag(:listing_id, @listing.id)
+      -#
+      -#- blocked_dates_result.on_success do
+      -#  %button.enabled-book-button
+      -#    .content
+      -#      = action_button_label(@listing)
+      -#
+      -#- blocked_dates_result.on_error do
+      -#  %button.disabled-book-button{disabled: true}
+      -#    .content
+      -#      = action_button_label(@listing)
 
     - if payment_gateway == :paypal && process != :none
       .row
