--- a/app/views/listings/show.haml
+++ b/app/views/listings/show.haml
@@ -152,7 +152,7 @@
               = link_to @listing.author.name(@current_community), @listing.author, :id => "listing-author-link", :class => "listing-author-name-link", :title => "#{@listing.author.name(@current_community)}"
             - if !author_is_current_user?
               .listing-author-contact
-                - if !@listing.active? && provider_is_current_user?
+                - if !@listing.active? && provider_is_current_user? && count_inbox.nonzero?
                   = link_to single_conversation_path(:conversation_type => "received", :id => conversation.first.id, person_id: @current_user.id), {class: 'listing-author-contact-button', id: 'listing-contact'} do
                     .content
                       = t(".contact")
