fix payment form

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1470,6 +1470,7 @@ input[type=text].delivery-price-field {
 
   .status-links {
     display: inline-block;
+    text-align: center;
   }
 
   .inbox-horizontally-aligned-status {
