--- a/app/views/transactions/_payment_form.html.haml
+++ b/app/views/transactions/_payment_form.html.haml
@@ -129,7 +129,7 @@
   - locals[:blocked_dates_result].on_success do
     %button.enabled-book-button.status-link{style: 'background: rgb(238, 96, 89)'}
       .content
-        = action_button_label(@listing)
+        = t('listings.payout')
 
   - locals[:blocked_dates_result].on_error do
     %button.disabled-book-button.status-link{disabled: true}
