--- a/app/views/listings/form/_images.haml
+++ b/app/views/listings/form/_images.haml
@@ -23,7 +23,7 @@
           .fileupload-text
           .fileupload-small-text
           .fileupload-error-text
-      %input.fileupload{type: "file", multiple: "multiple"}
+      %input.fileupload{type: "file"}
       %img.fileupload-preview-image
       .fileupload-preview-remove-image
         = icon_tag("cross", ["icon-fix"])
