--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2203,7 +2203,7 @@ figure.fluidratio {
   display: table;
   div.text-holder{
     color: #fff;
-    font-size: 2rem;
+    font-size: 2vw;
     text-align: center;
     vertical-align: middle;
     display: inline-grid;
