--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2222,15 +2222,15 @@ figure.fluidratio {
 }
 
 .status_green{
-  color: green;
+  color: #47c2a0;
   p{
-    color: green;
+    color: #47c2a0;
   }
 }
 .status_red{
-  color: red;
+  color: #ffc107;
   p{
-    color: red;
+    color: #ffc107;
   }
 }
 
